separate code further and make presentation-ready

--- a/SE ETL Project.ipynb
+++ b/SE ETL Project.ipynb
@@ -9,23 +9,9 @@
     "# imports\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "import sqlalchemy\n",
-    "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy import create_engine, inspect, func"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTES FOR FURTHER WORK\n",
-    "\n",
-    "1) Import web scraping - 17S? Vote counter? GM sheets? \n",
-    "2) Get SQLAlchemy classes working & analyze\n",
-    "3) Output visualizations in Flask? \n",
-    "4) "
    ]
   },
   {
@@ -37,7 +23,16 @@
     "source: https://docs.google.com/spreadsheets/d/1CxrgdT4Xd8J0N3CuVmkVRryMeIdm93H8rzv8-YlP0kw/\n",
     "\n",
     "FURTHER WORK:\n",
-    "Web scraping info - 17S turnovers? Votes? GM sheets? Player post counts? "
+    "Web scraping info - 17S turnovers? Votes? GM sheets? Player post counts?\n",
+    "\n",
+    "Add Sheets API pull to automate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Player data ('Data Test' tab)*"
    ]
   },
   {
@@ -253,10 +248,16 @@
     }
    ],
    "source": [
-    "# Player data ('Data Test' tab)\n",
     "player_path = \"DataTest.csv\"\n",
     "playerdata = pd.read_csv(player_path)\n",
     "playerdata.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Game data ('Game Stats' tab)*"
    ]
   },
   {
@@ -472,7 +473,6 @@
     }
    ],
    "source": [
-    "# Game data ('Game Stats' tab)\n",
     "game_path = \"GameStats.csv\"\n",
     "gamedata = pd.read_csv(game_path)\n",
     "gamedata.head()"
@@ -482,10 +482,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PART 2: TRANSFORMAT\n",
-    "### 2A: Player data\n",
+    "## PART 2: TRANSFORM\n",
     "\n",
-    "FURTHER WORK:\n",
+    "*FURTHER WORK:*\n",
     "\n",
     "1) Reduce/flatten non-player data into mod/spec/GM tables\n",
     "\n",
@@ -496,6 +495,14 @@
     "4) Deal with blanks in Hit columns and convert to numerical types\n",
     "\n",
     "5) Flatten further by giving players an ID and putting them somewhere else; provide tables that are basically keys for alignment, outcome, etc to clarify what they mean (?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2A: Player data\n",
+    "*Initial cleaning*"
    ]
   },
   {
@@ -535,9 +542,15 @@
     "             'Unnamed: 14', 'Broken', 'Role']]\n",
     "\n",
     "# Rename columns for accuracy or simplicity\n",
-    "pdata = pdata.rename(columns = {\"Player\": \"person\",\"Faction Outcome\": \"fOutcome\", \"First Hit\": \"Hit1\", \"Last Hit\": \"HitL\",\n",
-    "                       \"# of Hits\": \"HitNum\", \"Death/\\n Survival\": \"Death\", \"Game Type\": \"gtype\",\n",
-    "                       \"Game #\": \"GameNum\", \"Unnamed: 14\": \"Game\"})"
+    "pdata = pdata.rename(columns = {\"Player\": \"person\",\n",
+    "                                \"Faction Outcome\": \"fOutcome\", \n",
+    "                                \"First Hit\": \"Hit1\", \n",
+    "                                \"Last Hit\": \"HitL\",\n",
+    "                                \"# of Hits\": \"HitNum\", \n",
+    "                                \"Death/\\n Survival\": \"Death\", \n",
+    "                                \"Game Type\": \"gtype\",\n",
+    "                                \"Game #\": \"GameNum\", \n",
+    "                                \"Unnamed: 14\": \"Game\"})"
    ]
   },
   {
@@ -872,7 +885,7 @@
    ],
    "source": [
     "# pull relevant columns and filter by index list above\n",
-    "nonplayers = pdata.filter([\"Player\", \"GM\", \"Mod\", \"Spec\", \"gtype\", \"GameNum\", \"Game\", \"Broken\"], axis = 1)\n",
+    "nonplayers = pdata.filter([\"person\", \"GM\", \"Mod\", \"Spec\", \"gtype\", \"GameNum\", \"Game\", \"Broken\"], axis = 1)\n",
     "nonplayers = nonplayers.filter(nonplayers_list, axis = 0)\n",
     "\n",
     "nonplayers.head()\n",
