create player and nonplayer jsons

--- a/SE ETL Project.ipynb
+++ b/SE ETL Project.ipynb
@@ -739,7 +739,7 @@
     "                      \"Broken\": \"N\", \n",
     "                      \"Role\": \"-\"})\n",
     "print(len(pdata))\n",
-    "pdata.head()"
+    "pdata.head()\n"
    ]
   },
   {
@@ -783,112 +783,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GM</th>\n",
-       "      <th>Mod</th>\n",
-       "      <th>Spec</th>\n",
-       "      <th>gtype</th>\n",
-       "      <th>GameNum</th>\n",
-       "      <th>Game</th>\n",
-       "      <th>Broken</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Y</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Y</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>LG2</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   GM Mod Spec gtype  GameNum Game Broken\n",
-       "0   Y   N    N    LG      1.0  LG1      N\n",
-       "17  N   N    Y    LG      1.0  LG1      N\n",
-       "18  N   N    Y    LG      1.0  LG1      N\n",
-       "19  N   N    Y    LG      1.0  LG1      N\n",
-       "20  Y   N    N    LG      2.0  LG2      N"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pull relevant columns and filter by index list above\n",
     "nonplayers = pdata.filter([\"person\", \"GM\", \"Mod\", \"Spec\", \"gtype\", \"GameNum\", \"Game\", \"Broken\"], axis = 1)\n",
     "nonplayers = nonplayers.filter(nonplayers_list, axis = 0)\n",
     "\n",
     "nonplayers.head()\n",
+    "nonplayers.to_csv(\"NonPlayerData.csv\", index = False)\n",
     "\n",
     "# to clean further: combine GM/mod/spec into one column, don't need 'Game' probably\n",
     "# Maybe separate into separate GM/Mod/Spec tables?"
@@ -898,149 +800,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person</th>\n",
-       "      <th>Alignment</th>\n",
-       "      <th>fOutcome</th>\n",
-       "      <th>Hit1</th>\n",
-       "      <th>HitL</th>\n",
-       "      <th>HitNum</th>\n",
-       "      <th>Death</th>\n",
-       "      <th>Inactive</th>\n",
-       "      <th>gtype</th>\n",
-       "      <th>GameNum</th>\n",
-       "      <th>Game</th>\n",
-       "      <th>Broken</th>\n",
-       "      <th>Role</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cracknut</td>\n",
-       "      <td>G</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>E</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Tineye</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Edgedancer</td>\n",
-       "      <td>G</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>L</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Cop</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mailliw73</td>\n",
-       "      <td>G</td>\n",
-       "      <td>L</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>L</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Regular</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Aether</td>\n",
-       "      <td>E</td>\n",
-       "      <td>W</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>V</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Smoker</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Claincy</td>\n",
-       "      <td>E</td>\n",
-       "      <td>W</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LG</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LG1</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Vote Cancel</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       person Alignment fOutcome Hit1 HitL HitNum Death Inactive gtype  \\\n",
-       "1    Cracknut         G        L    1    1      1     E        N    LG   \n",
-       "2  Edgedancer         G        L    2    2      1     L        N    LG   \n",
-       "3   Mailliw73         G        L    4    4      1     L        N    LG   \n",
-       "4      Aether         E        W    4    4      1     V        N    LG   \n",
-       "5     Claincy         E        W    -    -      0     S        N    LG   \n",
-       "\n",
-       "   GameNum Game Broken         Role  \n",
-       "1      1.0  LG1      N       Tineye  \n",
-       "2      1.0  LG1      N          Cop  \n",
-       "3      1.0  LG1      N      Regular  \n",
-       "4      1.0  LG1      N       Smoker  \n",
-       "5      1.0  LG1      N  Vote Cancel  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# take out nonplayers to create players dataframe\n",
     "playerlist = [j for j in range(5763) if j not in nonplayers_list]\n",
@@ -1048,7 +808,8 @@
     "players = pdata.filter(playerlist, axis = 0)\n",
     "players = players.drop(['GM', 'Mod', 'Spec'], axis = 1)\n",
     "\n",
-    "players.head()"
+    "players.head()\n",
+    "players.to_csv(\"CleanPlayerData.csv\", index = False)"
    ]
   },
   {
@@ -2288,7 +2049,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x168d2399e50>"
+       "<matplotlib.collections.PathCollection at 0x266dd3b7160>"
       ]
      },
      "execution_count": 19,
@@ -2576,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2594,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2632,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2642,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2656,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2680,6 +2441,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>person</th>\n",
        "      <th>GM</th>\n",
        "      <th>Mod</th>\n",
        "      <th>Spec</th>\n",
@@ -2692,6 +2454,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Meta</td>\n",
        "      <td>Y</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
@@ -2702,6 +2465,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
+       "      <td>Windy</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
@@ -2712,6 +2476,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
+       "      <td>Weiry</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
@@ -2722,6 +2487,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
+       "      <td>Alvron</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
@@ -2732,6 +2498,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
+       "      <td>Meta</td>\n",
        "      <td>Y</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
@@ -2745,15 +2512,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   GM Mod Spec gtype  GameNum Game Broken\n",
-       "0   Y   N    N    LG      1.0  LG1      N\n",
-       "17  N   N    Y    LG      1.0  LG1      N\n",
-       "18  N   N    Y    LG      1.0  LG1      N\n",
-       "19  N   N    Y    LG      1.0  LG1      N\n",
-       "20  Y   N    N    LG      2.0  LG2      N"
+       "    person GM Mod Spec gtype  GameNum Game Broken\n",
+       "0     Meta  Y   N    N    LG      1.0  LG1      N\n",
+       "17   Windy  N   N    Y    LG      1.0  LG1      N\n",
+       "18   Weiry  N   N    Y    LG      1.0  LG1      N\n",
+       "19  Alvron  N   N    Y    LG      1.0  LG1      N\n",
+       "20    Meta  Y   N    N    LG      2.0  LG2      N"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2764,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2792,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2803,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2823,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2644,7 @@
        " ('MR43', 'L')]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
