--- a/ToMongo.ipynb
+++ b/ToMongo.ipynb
@@ -172,7 +172,7 @@
     }
    ],
    "source": [
-    "player_path = \"CleanPlayerData.csv\"\n",
+    "player_path = \"datacsvs/CleanPlayerData.csv\"\n",
     "playerdata = pd.read_csv(player_path)\n",
     "\n",
     "playerlist = playerdata['person'].unique()\n",
@@ -438,7 +438,7 @@
     "list_cur = list(cursor)\n",
     "json_data = dumps(list_cur)\n",
     "# Writing data to file data.json \n",
-    "with open('playerdata.json', 'w') as file: \n",
+    "with open('datajsons/playerdata.json', 'w') as file: \n",
     "    file.write(json_data) "
    ]
   },
@@ -560,7 +560,7 @@
     }
    ],
    "source": [
-    "nonplayer_path = \"NonPlayerData.csv\"\n",
+    "nonplayer_path = \"datacsvs/NonPlayerData.csv\"\n",
     "npdata = pd.read_csv(nonplayer_path)\n",
     "npdata.tail()"
    ]
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
     "list_cur2 = list(cursor2)\n",
     "json_data2 = dumps(list_cur2)\n",
     "# Writing data to file data.json \n",
-    "with open('nonplayerdata.json', 'w') as file2: \n",
+    "with open('datajsons/nonplayerdata.json', 'w') as file2: \n",
     "    file2.write(json_data2) "
    ]
   },
