--- a/SE ETL Project.ipynb
+++ b/SE ETL Project.ipynb
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "player_path = \"DataTest.csv\"\n",
+    "player_path = \"datacsvs/DataTest.csv\"\n",
     "playerdata = pd.read_csv(player_path)\n",
     "playerdata.head()"
    ]
@@ -473,7 +473,7 @@
     }
    ],
    "source": [
-    "game_path = \"GameStats.csv\"\n",
+    "game_path = \"datacsvs/GameStats.csv\"\n",
     "gamedata = pd.read_csv(game_path)\n",
     "gamedata.head()"
    ]
@@ -790,7 +790,7 @@
     "nonplayers = nonplayers.filter(nonplayers_list, axis = 0)\n",
     "\n",
     "nonplayers.head()\n",
-    "nonplayers.to_csv(\"NonPlayerData.csv\", index = False)\n",
+    "nonplayers.to_csv(\"datacsvs/NonPlayerData.csv\", index = False)\n",
     "\n",
     "# to clean further: combine GM/mod/spec into one column, don't need 'Game' probably\n",
     "# Maybe separate into separate GM/Mod/Spec tables?"
@@ -809,7 +809,7 @@
     "players = players.drop(['GM', 'Mod', 'Spec'], axis = 1)\n",
     "\n",
     "players.head()\n",
-    "players.to_csv(\"CleanPlayerData.csv\", index = False)"
+    "players.to_csv(\"datacsvs/CleanPlayerData.csv\", index = False)"
    ]
   },
   {
@@ -2049,7 +2049,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x266dd3b7160>"
+       "<matplotlib.collections.PathCollection at 0x1782d62e100>"
       ]
      },
      "execution_count": 19,
