refactor ToMongo and add game data json

--- a/SE ETL Project.ipynb
+++ b/SE ETL Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "[5 rows x 176 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "4    LG      1.0  LG1      N   Smoker  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
        "[5 rows x 176 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -1059,7 +1059,7 @@
        "Name: Game Stats, Length: 78, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "Name: Game Stats, Length: 78, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,230 +1575,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Game</th>\n",
-       "      <th># of Players</th>\n",
-       "      <th>Total Rank</th>\n",
-       "      <th># of Spectators</th>\n",
-       "      <th>Rank</th>\n",
-       "      <th># of E. Kills</th>\n",
-       "      <th># of Neutral Evil Kils</th>\n",
-       "      <th># of V. Kills</th>\n",
-       "      <th># of Lynches</th>\n",
-       "      <th># of FF Deaths</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Eliminators Vig'd</th>\n",
-       "      <th>Thread Reply Count</th>\n",
-       "      <th>Thread Reply Rank</th>\n",
-       "      <th>Setting</th>\n",
-       "      <th>Game Complexity</th>\n",
-       "      <th># of Cycles</th>\n",
-       "      <th>Winning Team</th>\n",
-       "      <th># of Survivors</th>\n",
-       "      <th>Total Rank</th>\n",
-       "      <th>Survivors</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LG1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>86</td>\n",
-       "      <td>3</td>\n",
-       "      <td>121</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>462</td>\n",
-       "      <td>79</td>\n",
-       "      <td>Cosmere</td>\n",
-       "      <td>Basic</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Eliminator</td>\n",
-       "      <td>6</td>\n",
-       "      <td>86</td>\n",
-       "      <td>Claincy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>LG2</td>\n",
-       "      <td>29</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1,232</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Cosmere</td>\n",
-       "      <td>Standard</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Eliminator</td>\n",
-       "      <td>4</td>\n",
-       "      <td>49</td>\n",
-       "      <td>Aether</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LG3</td>\n",
-       "      <td>22</td>\n",
-       "      <td>112</td>\n",
-       "      <td>5</td>\n",
-       "      <td>67</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>739</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Cosmere</td>\n",
-       "      <td>Basic</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Village</td>\n",
-       "      <td>8</td>\n",
-       "      <td>112</td>\n",
-       "      <td>Meta</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LG4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>123</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1,029</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Cosmere</td>\n",
-       "      <td>Standard</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Village</td>\n",
-       "      <td>9</td>\n",
-       "      <td>123</td>\n",
-       "      <td>Mailliw73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>QF1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>86</td>\n",
-       "      <td>11</td>\n",
-       "      <td>149</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>118</td>\n",
-       "      <td>141</td>\n",
-       "      <td>Cosmere</td>\n",
-       "      <td>Basic</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Eliminator</td>\n",
-       "      <td>6</td>\n",
-       "      <td>86</td>\n",
-       "      <td>Claincy</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Game # of Players Total Rank # of Spectators Rank # of E. Kills  \\\n",
-       "1  LG1           16         86               3  121             5   \n",
-       "2  LG2           29         49               2    5            14   \n",
-       "3  LG3           22        112               5   67             3   \n",
-       "4  LG4           30        123               1   23             4   \n",
-       "5  QF1           12         86              11  149             3   \n",
-       "\n",
-       "  # of Neutral Evil Kils # of V. Kills # of Lynches # of FF Deaths  ...  \\\n",
-       "1                      0             1            4              0  ...   \n",
-       "2                      0             2            7              2  ...   \n",
-       "3                      0             1            7              3  ...   \n",
-       "4                      0             4            8              4  ...   \n",
-       "5                      0             0            3              0  ...   \n",
-       "\n",
-       "  Eliminators Vig'd Thread Reply Count Thread Reply Rank  Setting  \\\n",
-       "1                 1                462                79  Cosmere   \n",
-       "2                 2              1,232                11  Cosmere   \n",
-       "3                 1                739                41  Cosmere   \n",
-       "4                 4              1,029                22  Cosmere   \n",
-       "5                 0                118               141  Cosmere   \n",
-       "\n",
-       "  Game Complexity # of Cycles Winning Team # of Survivors Total Rank  \\\n",
-       "1           Basic           4   Eliminator              6         86   \n",
-       "2        Standard          11   Eliminator              4         49   \n",
-       "3           Basic           7      Village              8        112   \n",
-       "4        Standard           9      Village              9        123   \n",
-       "5           Basic           4   Eliminator              6         86   \n",
-       "\n",
-       "   Survivors  \n",
-       "1    Claincy  \n",
-       "2     Aether  \n",
-       "3       Meta  \n",
-       "4  Mailliw73  \n",
-       "5    Claincy  \n",
-       "\n",
-       "[5 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdata3 = gdata3.drop(0, axis = 0)\n",
     "gdata3.head()\n",
     "\n",
-    "# TODO: split 'Game' into # and format"
+    "# TODO: split 'Game' into # and format\n",
+    "gdata3.to_csv('datacsvs/CleanGameData.csv')"
    ]
   },
   {
