add IM and Broken filters, work on GM filter (incl. redoing all player ids)

--- a/Cleaning/ToMongo.ipynb
+++ b/Cleaning/ToMongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,22 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_path = \"./datacsvs/CleanPlayerData.csv\"\n",
+    "player_path = \"datacsvs/CleanPlayerData.csv\"\n",
     "playerdata = pd.read_csv(player_path)\n",
     "realdata = playerdata[playerdata['Alignment'] != '0'] # eventually change to playerdata\n",
     "\n",
-    "nonplayer_path = \"./datacsvs/NonPlayerData.csv\"\n",
+    "nonplayer_path = \"datacsvs/NonPlayerData.csv\"\n",
     "npdata = pd.read_csv(nonplayer_path)\n",
     "\n",
-    "gamepath = './datacsvs/CleanGameData.csv'\n",
-    "game_data = pd.read_csv(gamepath)\n",
-    "\n",
-    "fullpath = './datacsvs/DataTest.csv'\n",
-    "fulldata = pd.read_csv(fullpath)"
+    "gamepath = 'datacsvs/CleanGameData.csv'\n",
+    "game_data = pd.read_csv(gamepath)"
    ]
   },
   {
@@ -66,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "playerlist = fulldata['Player'].unique()\n",
+    "playerlist = realdata['person'].unique()\n",
     "player_ids = {p:(i+1) for i,p in enumerate(playerlist)}\n",
     "\n",
     "gamelist = realdata['Game'].unique()\n",
@@ -150,7 +147,7 @@
    "source": [
     "json_player_data = dumps(list(players.find()))\n",
     " \n",
-    "with open('./datajsons/playerdata.json', 'w') as file: \n",
+    "with open('datajsons/playerdata.json', 'w') as file: \n",
     "    file.write(json_player_data) "
    ]
   },
@@ -235,7 +232,7 @@
    "outputs": [],
    "source": [
     "json_nonplayer_data = dumps(list(nonplayers.find()))\n",
-    "with open('./datajsons/nonplayerdata.json', 'w') as file2: \n",
+    "with open('datajsons/nonplayerdata.json', 'w') as file2: \n",
     "    file2.write(json_nonplayer_data) "
    ]
   },
@@ -431,7 +428,7 @@
     "#     print(result)\n",
     "\n",
     "json_game_data = dumps(list(games.find()))\n",
-    "with open('./datajsons/gamedata.json', 'w') as file3: \n",
+    "with open('datajsons/gamedata.json', 'w') as file3: \n",
     "    file3.write(json_game_data) "
    ]
   },
