who knows, changes from weeks ago

--- a/ToMongo.ipynb
+++ b/ToMongo.ipynb
@@ -461,38 +461,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'game_id': 75,\n",
-       " 'game_str': 'LG31',\n",
-       " 'format': 'LG',\n",
-       " 'game_num': '31',\n",
-       " 'num_players': 17,\n",
-       " 'alignment_counts': {'G': 13.0, 'E': 3.0, 'N': 1.0},\n",
-       " 'outcome_counts': {'L': 4.0, 'W': 13.0},\n",
-       " 'status_counts': {'E_death': 3.0,\n",
-       "  'L_death': 2.0,\n",
-       "  'V': 2.0,\n",
-       "  'S_death': 8.0,\n",
-       "  'F_death': 1.0,\n",
-       "  'N_death': 1.0},\n",
-       " 'inactives': 0.0,\n",
-       " 'broken': 0.0,\n",
-       " 'mod': 12,\n",
-       " 'spec': [178, 45, 126],\n",
-       " 'gm': [139, 167, 184],\n",
-       " 'winner': 'Village',\n",
-       " 'setting': 'Cosmere',\n",
-       " 'length': '2',\n",
-       " 'complexity': 'Semi Standard',\n",
-       " '_id': ObjectId('6000b227f82ce4e67563f311')}"
+       "['LG3',\n",
+       " 'LG4',\n",
+       " 'MR1',\n",
+       " 'MR2',\n",
+       " 'LG8',\n",
+       " 'LG10',\n",
+       " 'QF6',\n",
+       " 'LG11',\n",
+       " 'MR6',\n",
+       " 'LG12',\n",
+       " 'MR7',\n",
+       " 'LG14',\n",
+       " 'LG15.1',\n",
+       " 'LG15.2',\n",
+       " 'MR10',\n",
+       " 'QF13',\n",
+       " 'LG18',\n",
+       " 'LG19',\n",
+       " 'LG20',\n",
+       " 'LG21',\n",
+       " 'MR14',\n",
+       " 'QF16',\n",
+       " 'MR15',\n",
+       " 'LG24',\n",
+       " 'LG26',\n",
+       " 'LG27',\n",
+       " 'LG29',\n",
+       " 'MR21',\n",
+       " 'LG33',\n",
+       " 'LG35',\n",
+       " 'MR23',\n",
+       " 'LG36',\n",
+       " 'LG38',\n",
+       " 'LG42',\n",
+       " 'LG43',\n",
+       " 'MR29',\n",
+       " 'LG46',\n",
+       " 'QF32',\n",
+       " 'QF33.1',\n",
+       " 'AG5',\n",
+       " 'QF40.1',\n",
+       " 'MR38.1',\n",
+       " 'LG61',\n",
+       " 'LG65']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +523,7 @@
     "# np_stats\n",
     "# game_stats\n",
     "\n",
-    "game_stats[75]"
+    "list(game_ids_df[game_ids_df['Y_broken'] > 0]['str'])"
    ]
   },
   {
